Removed duplicated code and cleaned up warnings for unused imports and deprecated methods. (#770)